Implementación tablas de datos front

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <nav>
         <li class="btnEspacios">Espacios</li>
         <li class="btnRiesgos">Riesgos</li>
+        <li class="btnPersonas">Personas</li>
+        <li class="btnAntecedentes">Antecedentes</li>
         <li class="btnRecomendaciones">Recomendaciones</li>
       </nav>
     </header>
@@ -26,6 +28,11 @@
         </tbody>
       </table>
     </main>
+    <div class="divGrafo">
+      <div class="grafo">
+      </div>
+    </div>
+    <button class="btnShowGrafo">Grafo</button>
   </body>
   <script type="module" src="./app.js"></script>
 </html>
