--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/31f41c2567.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>App Habitabilidad</title>
   </head>
   <body>
     <header>
       <nav>
-        <li class="btnEspacios">Espacios</li>
-        <li class="btnRiesgos">Riesgos</li>
-        <li class="btnPersonas">Personas</li>
-        <li class="btnAntecedentes">Antecedentes</li>
-        <li class="btnRecomendaciones">Recomendaciones</li>
+        <ul>
+          <li class="btnEspacios">Espacios</li>
+          <li class="btnRiesgos">Riesgos</li>
+          <li class="btnPersonas">Personas</li>
+          <li class="btnAntecedentes">Antecedentes</li>
+          <li class="btnRecomendaciones">Recomendaciones</li>
+        </ul>
+        <i class="fa-solid fa-diagram-project btnShowGrafo"></i>
       </nav>
     </header>
     <main>
@@ -28,11 +32,12 @@
         </tbody>
       </table>
     </main>
-    <div class="divGrafo">
+    <div class="divGrafo" hidden>
       <div class="grafo">
+        <i class="fa-solid fa-xmark closeGraph"></i>
       </div>
     </div>
-    <button class="btnShowGrafo">Grafo</button>
+    
   </body>
   <script type="module" src="./app.js"></script>
 </html>
