Movimiento de personas y nuevos riesgos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <i class="fa-solid fa-xmark closeGraph"></i>
       </div>
     </div>
-    
+    <div class="hoverTableContainer" style="display: none; position: absolute; bottom: 20px; right: 20px; background-color: white; border: 1px solid black; padding: 10px;">
+      <table class="hoverTable">
+        <tbody></tbody>
+      </table>
+    </div>
   </body>
   <script type="module" src="./app.js"></script>
 </html>
