Modal y tabla de recomendaciones

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <tbody></tbody>
       </table>
     </div>
+    <div class="backgroundModal modalOculto">
+      <div class="modalInfoEspacio">
+        
+      </div>
+      <i class="fa-solid fa-xmark closeModal"></i>
+    </div>
   </body>
   <script type="module" src="./app.js"></script>
 </html>
